# -3

./: .gitignore  ENV.yml  README.md  conanfile.txt
Code/: Anim.cpp  CMakeLists.txt  Database.cpp  bake2.frag  base.frag  base.glsl  bvh.h  common.cpp  common.h  main.cpp  miniaudio.cpp  plugin.cpp  rig.csv  text.glsl
